--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
   },
   "devDependencies": {
     "@types/firefox-webext-browser": "^111.0.2",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.11",
     "bun-types": "^1.0.5-canary.20231007T140129",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
