--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "manifest": "cp -v ./manifest.json ./dist/",
     "build": "bun ./build.ts && bun manifest && bun tailwind"
   },
+  "prettier": {
+    "plugins": ["prettier-plugin-tailwindcss"]
+  },
   "devDependencies": {
     "@types/firefox-webext-browser": "^111.0.2",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.11",
     "bun-types": "^1.0.5-canary.20231007T140129",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.5",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   },
