--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "tailwind": "tailwindcss -i ./src/content/styles.css -o ./dist/content/styles.css",
     "tailwind:watch": "bun tailwind --watch",
     "manifest": "cp -v ./manifest.json ./dist/",
-    "build": "bun ./build.ts && bun manifest && bun tailwind"
+    "build": "rm -r ./dist && bun ./build.ts && bun manifest && bun tailwind"
   },
   "prettier": {
-    "plugins": ["prettier-plugin-tailwindcss"]
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   },
   "devDependencies": {
     "@types/firefox-webext-browser": "^111.0.2",
