--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "tailwind": "tailwindcss -i ./src/content/styles.css -o ./dist/content/styles.css",
     "tailwind:watch": "bun tailwind --watch",
     "manifest": "cp -v ./manifest.json ./dist/",
-    "build": "rm -r ./dist && bun ./build.ts && bun manifest && bun tailwind"
+    "build": "rm -rf ./dist && bun ./build.ts && bun manifest && bun tailwind"
   },
   "prettier": {
     "plugins": [
