--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "tailwind": "tailwindcss -i ./src/content/styles.css -o ./dist/content/styles.css",
     "tailwind:watch": "bun tailwind --watch",
     "manifest": "cp -v ./manifest.json './ˢᵐᵒᶫ ᵇᵒᶜᶜ.png' ./dist/",
-    "build": "rm -rf ./dist && bun ./build.ts && bun manifest && bun tailwind"
+    "rollup": "rollup --config rollup.config.ts --configPlugin typescript",
+    "build": "rm -rf ./dist && bun rollup && bun manifest && bun tailwind"
   },
   "prettier": {
     "plugins": [
@@ -13,6 +14,10 @@
     ]
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.5",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/firefox-webext-browser": "^111.0.2",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.11",
@@ -24,6 +29,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
+    "rollup": "^4.0.2",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   },
