--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,16 @@
 {
   "compilerOptions": {
-    "lib": ["ESNext"],
-    "target": "esnext",
+    "target": "es2020",
     "module": "esnext",
 
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "noEmit": true,
-    "allowImportingTsExtensions": true,
-    "moduleDetection": "force",
 
     "jsx": "react-jsx",
 
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "composite": true,
     "downlevelIteration": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
