Add initial settings modal
Added a modal for settings. For now just the 18+ rated content can be
changed, and it is off by default (previously results were retrieved
without this filter).

Settings are saved using the web extension storage api which requires
new storage permissions.

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Dokodemo AniList (Unofficial)",
   "description": "Bring AniList's search box anywhere",
   "version": "0.1.1",
-  "permissions": ["activeTab", "contextMenus", "scripting"],
+  "permissions": ["activeTab", "contextMenus", "scripting", "storage"],
   "background": {
     "scripts": ["background.js"]
   },
