--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Dokodemo AniList (Unofficial)",
   "description": "Bring AniList's search box anywhere",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "permissions": ["activeTab", "contextMenus", "scripting", "storage"],
   "background": {
     "scripts": ["background.js"]
@@ -12,14 +12,14 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "dokodemo-anilist@4ndrs"
+      "id": "dokodemo-anilist@4ndrs.dev"
     }
   },
   "host_permissions": ["https://*.anilist.co/*"],
   "web_accessible_resources": [
     {
       "resources": ["content/assets/*"],
-      "extension_ids": ["dokodemo-anilist@4ndrs"]
+      "extension_ids": ["dokodemo-anilist@4ndrs.dev"]
     }
   ]
 }
